# lens

./: .gitignore  CLAUDE.md  Makefile  README.md  llms-full.txt  llms.txt  pyproject.toml  server.json  smithery.yaml
examples/: csv_dashboard.yaml  northwind_dashboard.yaml  sales_dashboard.yaml
examples/csv_test/: customers.csv  sales.csv
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/filters/: DateFilter.tsx  DateRangeFilter.tsx  DropdownFilter.tsx  NumberRangeFilter.tsx  TextFilter.tsx  ToggleFilter.tsx
frontend/src/components/layout/: FilterBar.tsx  PageLayout.tsx  Sidebar.tsx  TabBar.tsx  ThemeCustomizer.tsx
frontend/src/components/widgets/: Chart.tsx  DataTable.tsx  Divider.tsx  KPICard.tsx  TextBlock.tsx
frontend/src/data/: theme-presets.ts
frontend/src/hooks/: useConfig.ts  useFilters.ts  useQuery.ts  useTheme.ts  useThemeCustomizer.ts  useUrlState.ts
frontend/src/lib/: formatting.ts
frontend/src/types/: config.ts
lens/: __init__.py  app.py  cli.py  config.py  database.py  filters.py  server.py  watcher.py
lens/backends/: __init__.py  base.py  duckdb.py  postgres.py
lens/mcp/: __init__.py  generator.py  introspect.py  schema.py  server.py
lens/static/: index.html
lens/static/assets/: index-B0sAqkGo.css  index-Cj6SROHm.css  index-CntSbTSY.js  index-DHoUHBh2.css  index-DQgOmuhT.js  index-DYTsjjJJ.js  index-DcSVj29u.js
