[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindcase-lens"
version = "0.2.2"
description = "Instant dashboards from Claude Code. Connect to PostgreSQL, CSV, Excel, or Parquet — get a production-ready analytics dashboard in under a minute."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mindcase", email = "team@mindcase.co" },
]
keywords = [
    "dashboard",
    "analytics",
    "visualization",
    "postgres",
    "yaml",
    "data-visualization",
    "business-intelligence",
    "kpi",
    "charts",
    "fastapi",
    "mindcase",
    "lens",
    "sql-dashboard",
    "analytics-dashboard",
    "data-dashboard",
    "csv-dashboard",
    "duckdb",
    "claude",
    "ai-dashboard",
    "llm",
    "no-code-dashboard",
    "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "asyncpg>=0.29.0",
    "duckdb>=1.0.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "watchfiles>=0.21.0",
    "websockets>=12.0",
    "click>=8.0",
]

[project.scripts]
lens = "lens.cli:main"

[project.urls]
Homepage = "https://mindcase.co"
Documentation = "https://github.com/mindcase-co/lens"
Repository = "https://github.com/mindcase-co/lens"
Issues = "https://github.com/mindcase-co/lens/issues"
Changelog = "https://github.com/mindcase-co/lens/releases"

[tool.hatch.build.targets.wheel]
packages = ["lens"]
